--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -29,6 +29,10 @@
     &.rounded-top {
         border-radius: 30px 30px 0px 0px;
     }
+
+    @media (max-width: 1024px) {
+        padding: 60px 30px 80px;
+    }
 }
 
 /* -------------------------- Grid -------------------------- */
@@ -288,6 +292,14 @@
     padding-right: 60px;
 }
 
+.pr-40 {
+    padding-right: 40px;
+}
+
+.pl-40 {
+    padding-left: 40px;
+}
+
 .wfull {
     width: 100%;
 }
@@ -320,11 +332,71 @@
     flex-wrap: wrap;
 }
 
-.flex-col-mb {
-    @media (max-width: 767px) {
+.img-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+    .flex-mb {
+        display: flex;
+    }
+
+    .flex-center-x-mb {
+        justify-content: center;
+    }
+
+    .flex-center-y-mb {
+        align-items: center;
+    }
+
+    .flex-col-mb {
         flex-direction: column;
     }
+
+    .flex-col-reverse-mb {
+        flex-direction: column-reverse;
+    }
+
+    .flex-wrap-mb {
+        flex-wrap: wrap;
+    }
+
+    .text-center-mb {
+        text-align: center;
+    }
+
+    .text-left-mb {
+        text-align: left;
+    }
+
+    .text-right-mb {
+        text-align: right;
+    }
+
+    .hide-on-mobile {
+        display: none !important;
+    }
+
+    .pr-0-mb {
+        padding-right: 0 !important;
+    }
+
+    .pl-0-mb {
+        padding-left: 0 !important;
+    }
+    
+    .pt-0-mb {
+        padding-top: 0 !important;
+    }
+
+    .pb-0-mb {
+        padding-bottom: 0 !important;
+    }
 }
+
 .container-1920 {
     width: 100%;
     max-width: 1920px;
