--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -31,7 +31,7 @@
     }
 
     @media (max-width: 1024px) {
-        padding: 60px 30px 80px;
+        padding: 40px 20px 60px;
     }
 }
 
@@ -47,8 +47,8 @@
         --grid-gap: 0;
     }
 
-    &.gap-40 {
-        --grid-gap: 40px;
+    &.gap-120 {
+        --grid-gap: 120px;
     }
 }
 
@@ -155,6 +155,10 @@
     text-transform: uppercase;
     margin: 0;
     margin-bottom: 18px;
+
+    @media (max-width: 767px) {
+        margin-top: 20px;
+    }
 }
 
 
@@ -203,6 +207,10 @@
 .block-image {
     width: 100%;
     flex: 1;
+
+    &-full {
+        width: 100%;
+    }
 }
 
 .text-15 {
@@ -277,19 +285,19 @@
 }
 
 .pt-60 {
-    padding-top: 60px;
+    padding-top: 60px !important;
 }
 
 .pb-60 {
-    padding-bottom: 60px;
+    padding-bottom: 60px !important;
 }
 
 .pl-60 {
-    padding-left: 60px;
+    padding-left: 60px !important;
 }
 
 .pr-60 {
-    padding-right: 60px;
+    padding-right: 60px !important;
 }
 
 .pr-40 {
@@ -298,6 +306,55 @@
 
 .pl-40 {
     padding-left: 40px;
+}
+
+.pb-40 {
+    padding-bottom: 40px;
+}
+
+.pt-40 {
+    padding-top: 40px;
+}
+
+.m-0 {
+    margin: 0;
+}
+
+.ml-0 {
+    margin-left: 0;
+}
+
+.mr-0 {
+    margin-right: 0;
+}
+
+.mt-0 {
+    margin-top: 0;
+}
+
+.mb-0 {
+    margin-bottom: 0;
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ml-60 {
+    margin-left: 60px;
+}
+
+.mr-60 {
+    margin-right: -60px;
+}
+
+.mb-60 {
+    margin-bottom: 60px;
+}
+
+.mt-60 {
+    margin-top: -60px;
 }
 
 .wfull {
@@ -310,6 +367,18 @@
 
 .max-580 {
     max-width: 580px;
+}
+
+.block {
+    display: block;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.relative {
+    position: relative;
 }
 
 .flex {
@@ -338,6 +407,25 @@
     object-fit: cover;
 }
 
+/* Tablet */
+@media (max-width: 1024px) {
+    .pt-20-tl {
+        padding-top: 20px !important;
+    }
+
+    .pl-20-tl {
+        padding-left: 20px !important;
+    }
+
+    .pr-20-tl {
+        padding-right: 20px !important;
+    }
+
+    .pb-20-tl {
+        padding-bottom: 20px !important;
+    }
+}
+
 /* Mobile */
 @media (max-width: 767px) {
     .flex-mb {
@@ -362,6 +450,10 @@
 
     .flex-wrap-mb {
         flex-wrap: wrap;
+    }
+
+    .max-wfull-mb {
+        max-width: 100%;
     }
 
     .text-center-mb {
@@ -406,8 +498,10 @@
 
 .container:has(.container-1920) {
     max-width: 1920px;
+    padding: 0;
 }
 
 .body:has(.container-1920) {
     margin-top: 0;
 }
+
