--- a/templates/pages/custom/page/custom-private-label-page.html
+++ b/templates/pages/custom/page/custom-private-label-page.html
@@ -8,10 +8,10 @@
     <div class="container-1920">
         <div class="flex banner-top flex-col-mb">
             <div class="banner-top__item banner-top__item-left pl-0-mb pr-0-mb">
-                <h2 class="gradient-heading">PRIVATE LABEL</h2>
+                <h2 class="gradient-heading text-center-mb">PRIVATE LABEL</h2>
                 <div class="content">
-                    <h4 class="custom-heading">GET OUR PRICELIST NOW</h4>
-                    <p class="custom-text lh-24 fz-16">
+                    <h4 class="custom-heading text-center-mb">GET OUR PRICELIST NOW</h4>
+                    <p class="custom-text lh-24 fz-16 text-center-mb">
                         We pride ourselves on making sure you have all the relevant info you need to see if we are a good fit for your needs. This page is packed with info that will give you the ins and outs of private labeling with us. You can provide us with your info here and we will email you links immediately to our brochure and price list.
                     </p>
                 </div>
@@ -19,8 +19,8 @@
 
             <div class="banner-top__item banner-top__item-right">
                 <div class="prilist_form" id="price_list">
-                    <h3 class="capitalize mulish fw-700 lh-26 text-black">Get Our Price List Now</h3>
-                    <p class="lh-26 fw-400 mulish text-black custom-text">Please provide us with the information below and we will send you more info and our price-list immediately.</p>
+                    <h3 class="capitalize mulish fw-700 lh-26 text-black text-center-mb">Get Our Price List Now</h3>
+                    <p class="lh-26 fw-400 mulish text-black custom-text text-center-mb">Please provide us with the information below and we will send you more info and our price-list immediately.</p>
                     <div class="klaviyo-form-KVTrs4 klaviyo_main"></div>
                 </div>
             </div>
@@ -32,8 +32,8 @@
 <section class="custom-section bg-black rounded-top mt-20">
     <div class="container-1920">
         <div class="flex flex-col flex-col-reverse-mb">
-            <div class="flex block-content-full flex-col-mb text-center-mb">
-                <h3 class="custom-heading max-580 wfull text-blue pr-60 text-center-mb pr-0-mb">WHAT IS <br class="hide-on-mobile"> PRIVATE LABELING</h3>
+            <div class="flex block-content-full flex-col-mb text-center-mb pb-60 pb-0-mb">
+                <h3 class="custom-heading max-580 wfull text-blue pr-60 text-center-mb pr-0-mb max-wfull-mb mb-0">WHAT IS <br class="hide-on-mobile"> PRIVATE LABELING</h3>
                 <p class="custom-text text-white pl-60 text-center-mobile pl-0-mb">
                     Private labeling is a procedure used to manufacture bath and body products by a third party and sell them under your brand. You just need to worry about a few items during this procedure, like labeling design and your target market. We take care of the rest. We are a full turnkey solution, and we will provide product development, formulating, packaging procurement, and label printing, for a fully completed retail experience.
                 </p>
@@ -50,7 +50,7 @@
 <section class="custom-section bg-white rounded-top mt-20">
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-reverse-mb">
-            <div class="block-content">
+            <div class="block-content max-wfull-mb">
                 <h3 class="custom-heading text-blue text-center-mb">Minimum Order Quantities</h3>
                 <p class="custom-text text-center-mb">
                     We wanted to create a dedicated section for this as it is usually a common initial question. We have the lowest MOQ in the industry for a fully automated facility that manufactures to our standard. For products in a jar or a bottle, the MOQ is 500 units per variation. If we are creating custom pouches for you, which we can do in-house, the MOQ is 1000 units per variation. It is important to us to try and lower the barriers to entry to this market and our MOQ certainly helps us live up to that initiative.
@@ -58,46 +58,57 @@
             </div>
 
             <div class="block-image pl-40 pl-0-mb">
-                <img src="https://source.unsplash.com/random" class="img-cover" alt="Minimum Order Quantities">
+                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities.png" class="img-cover" alt="Minimum Order Quantities">
             </div>
         </div>
     </div>
 </section>
 
 <!-- Section Getting started -->
-<section class="custom-section bg-black rounded mt-20">
+<section class="custom-section bg-black rounded-top mt-20">
     <div class="container-1920">
-        <div class="grid no-gap">
-            <div class="row">
-                <div class="col l-3 m-2 s-1 pr-60 pr-0-mb">
-                    <h3 class="custom-heading text-blue text-center-mb">Getting started</h3>
-                    <p class="custom-text text-white text-center-mb">
+        <div class="flex flex-wrap flex-col-reverse-mb">
+            <div class="flex flex-col-mb">
+                <div class="block-content pb-60 pb-20-tl">
+                    <h3 class="custom-heading text-blue">Getting started</h3>
+                    <p class="custom-text text-white">
                         The experienced staff at The Midwest Sea Salt Company is ready to help you determine the best options and solutions for your professional skin care line. The following provides a basic outline of the steps we follow with each client.
                     </p>
                 </div>
-                <div class="col l-3 m-2 s-1 pl-60 pr-60 pl-0-mb pr-0-mb">
-                    <ul>
-                        <li class="text-white custom-text">
-                            <strong>Project Definition</strong> - in this phase you will interact with our Director of Business development - either in our showroom or by phone. In this meeting we will review your project, your brand, your time-line and your goals. Our focus is to ensure we understand your vision of what you are hoping to achieve for your customers and your business.
-                        </li>
-                        <li class="text-white custom-text">
-                            <strong>Scenting Options</strong> - While many of our products have a wonderfully natural scent from the organic and natural ingredients used, we understand the importance of offering different and beautiful scents for bath, body and some skin care products. We manufacture all our fragrances in house and have an array of 3500 fragrances to choose from. We offer fragrance oils and essential oils as well. We are sure to have something that tickles your fancy and all our fragrance oils are phthalate free fragrances.
-                        </li>
-                        <li class="text-white custom-text">
-                            <strong>Labeling Options</strong> - When it comes to labeling your product we only use the best, no matter the quantity. We use full color offset printing using water proof labels with lamination for every label. This is usually the first thing that your customers will see so we make sure you put your best foot forward. We do offer screen printing services as well. Your project specialists will work with you to provide you with the best option to meet your needs.
-                        </li>
+                <div class="block-image pb-60 pb-0-mb">
+                    <ul class="flex flex-col flex-wrap ml-0 grid no-gap mb-0">
+                        <div class="row">
+                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
+                                <li class="text-white">
+                                    <strong>Project Definition</strong> - in this phase you will interact with our Director of Business development - either in our showroom or by phone. In this meeting we will review your project, your brand, your time-line and your goals. Our focus is to ensure we understand your vision of what you are hoping to achieve for your customers and your business.
+                                </li>
+                            </div>
+                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
+                                <li class="text-white">
+                                    <strong>Scenting Options</strong> - While many of our products have a wonderfully natural scent from the organic and natural ingredients used, we understand the importance of offering different and beautiful scents for bath, body and some skin care products. We manufacture all our fragrances in house and have an array of 3500 fragrances to choose from. We offer fragrance oils and essential oils as well. We are sure to have something that tickles your fancy and all our fragrance oils are phthalate free fragrances.
+                                </li>
+                            </div>
+                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
+                                <li class="text-white">
+                                    <strong>Labeling Options</strong> - When it comes to labeling your product we only use the best, no matter the quantity. We use full color offset printing using water proof labels with lamination for every label. This is usually the first thing that your customers will see so we make sure you put your best foot forward. We do offer screen printing services as well. Your project specialists will work with you to provide you with the best option to meet your needs.
+                                </li>
+                            </div>
+                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
+                                <li class="text-white">
+                                    <strong>Product Selection</strong> - Based on your objectives and budget we will help you identify the best product selection for your skin care line. If we don’t currently offer what you are looking for, we usually can manufacture it for you.
+                                </li>
+                            </div>
+                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
+                                <li class="text-white">
+                                    <strong>Packaging Options</strong> - A key component to the success of your new line will be the packaging you choose. The only thing in the process that we may outsource is packaging. Being that every customer we work with has a different vision, we source our jars, bottles and tops from the largest distributor in the United States. We source a wide range of quality recyclable PET, glass and aluminum packaging choices for our clients. We also manufacture “in-house” custom printed flexible packaging, as well as custom printed tubes. We will present you with the best options available to meet your budget and branding goals.
+                                </li>
+                            </div>
+                        </div>
                     </ul>
                 </div>
-                <div class="col l-3 m-2 s-1 pl-60 pl-0-mb">
-                    <ul>
-                        <li class="text-white custom-text">
-                            <strong>Product Selection</strong> - Based on your objectives and budget we will help you identify the best product selection for your skin care line. If we don’t currently offer what you are looking for, we usually can manufacture it for you.
-                        </li>
-                        <li class="text-white custom-text">
-                            <strong>Packaging Options</strong> - A key component to the success of your new line will be the packaging you choose. The only thing in the process that we may outsource is packaging. Being that every customer we work with has a different vision, we source our jars, bottles and tops from the largest distributor in the United States. We source a wide range of quality recyclable PET, glass and aluminum packaging choices for our clients. We also manufacture “in-house” custom printed flexible packaging, as well as custom printed tubes. We will present you with the best options available to meet your budget and branding goals.
-                        </li>
-                    </ul>
-                </div>
+            </div>
+            <div class="block-image-full">
+                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/getting-started.png" alt="Getting started image">
             </div>
         </div>
     </div>
