--- a/assets/scss/halo.scss
+++ b/assets/scss/halo.scss
@@ -136,6 +136,7 @@
                     display: flex;
                     justify-content: space-between;
                     cursor: pointer;
+                    text-transform: capitalize;
                     margin-bottom: 0;
 
                     .icon {
