--- a/assets/scss/halo.scss
+++ b/assets/scss/halo.scss
@@ -310,6 +310,26 @@
                 bottom: 7%;
                 flex-direction: row;
             }
+
+        }
+    }
+}
+
+.section-slick {
+    .slick-dots {
+        > li {
+            width: 12px;
+            height: 12px;
+
+            button {
+                width: 12px;
+                height: 12px;
+
+                &::before {
+                    width: 12px;
+                    height: 12px;
+                }
+            }
         }
     }
 }
@@ -464,6 +484,12 @@
     }
 
     .banner-block-content {
+        &:hover {
+            .slick-arrow {
+                opacity: 1 !important;
+            }
+        }
+
         .banner__list {
             .banner__item {
                 background-color: #f8f8f8;
@@ -550,13 +576,70 @@
                             font-weight: 400;
                             line-height: 140%;
                             margin-bottom: 45px;
-
+                            font-family: Mulish;
                         }
                         
                         .banner__button {
                             font-weight: 700;
                             margin-bottom: 0;
                         }
+                    }
+                }
+            }
+
+            .slick-arrow {
+                width: 35px;
+                height: 35px;
+                border-radius: 50%;
+                border: 1px solid #cccccc;
+                opacity: 0;
+
+                &:hover{
+                    opacity: 1;
+
+                    &:before {
+                        background-size: 8px;
+                    } 
+                }
+
+
+                @media (max-width: 1024px) {
+                    display: none;
+                }
+
+                &.slick-next {
+                    right: -13%;
+                }
+
+                &.slick-prev {
+                    left: -13%;
+                }
+
+                &:before {
+                    width: 35px;
+                    height: 35px;
+                    background-size: 8px;
+                } 
+            }
+
+            .slick-dots {
+                position: relative;
+                margin-bottom: 50px;
+
+                @media (max-width: 767px) {
+                    margin-bottom: 20px;
+                }
+
+                > li {
+                    margin-left: 7px;
+                    margin-right: 7px;
+
+                    &:first-child{
+                        margin-left: 0;
+                    }
+
+                    &:last-child{
+                        margin-right: 0;
                     }
                 }
             }
@@ -567,6 +650,11 @@
 
 
 .section-contact-banner-block {
+    padding-bottom: 110px;
+
+    @media (max-width: 767px) {
+        padding-bottom: 50px;
+    }
     .contact-banner__block {
         background: #f5f5f5;
 
@@ -618,6 +706,14 @@
                 padding: 30px 15px;
                 margin: 0 auto;
 
+                @media (max-width: 1400px) {
+                    max-width: 100%;
+                }
+
+                @media (max-width: 650px) {
+                    flex-direction: column;
+                }
+
                 .content-box__divider {
                     height: 240px;
                     width: 1px;
@@ -625,6 +721,10 @@
                     background: #626262;
                     display: block;
                     transform: translateY(26px);
+
+                    @media (max-width: 650px) {
+                       display: none;
+                    }
                 }
 
                 .content-col {
@@ -640,6 +740,11 @@
 
                         @media (max-width: 1400px) {
                             margin-right: 15px; 
+                            max-width: 50%;
+                        }
+
+                        @media (max-width: 650px) {
+                            max-width: 100%;
                         }
                     }
 
@@ -653,6 +758,13 @@
 
                         @media (max-width: 1400px) {
                             margin-left: 15px; 
+                            max-width: 50%;
+                        }
+
+                        @media (max-width: 650px) {
+                            margin-top: 40px;
+                            margin-left: 0;
+                            max-width: 100%;
                         }
                     }
 
@@ -697,6 +809,18 @@
                         line-height: 140%;
                         margin-top: 20px;
                         margin-bottom: 12px;
+                        font-family: Mulish;
+
+                        &.banner__text-icon{
+                            @media (min-width: 400px) {
+                                white-space: nowrap;
+                            }
+
+                            .banner__icon {
+                                display: inline-block;
+                                transform: translateY(5px);
+                            }
+                        }
 
                         &.banner__text-icon-phone {
                             margin-bottom: 0;
@@ -706,6 +830,290 @@
                         &.banner__text-icon-email {
                             margin-top: 0;
                             margin-bottom: 12px;
+                        }
+
+                        .banner__link {
+                            margin-left: 10px;
+                            word-wrap: break-word;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* Contact Us Page */
+.contact-us-top-banner {
+    position: relative;
+    padding-top: 15.05376344086022%;
+    min-height: 280px;
+
+    @media (max-width: 767px) {
+        padding-top: 66%;
+        min-height: 360px;
+    }
+
+    .topBanner__image {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .topBanner-image-pc {
+            @media (max-width: 767px) {
+                display: none;
+            }
+
+        }
+
+        .topBanner-image-mb {
+            @media (min-width: 768px) {
+                display: none;
+            }
+        }
+    }
+
+    .topBanner__content {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 540px;
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+
+        .topBanner__breadcrumb {
+            .Braedcrumbs {
+                background-color: transparent;
+        
+                .breadcrumbs {
+                    text-align: center;
+                    .breadcrumb  {
+                        &::before {
+                            background-image: url('data:image/svg+xml,<svg fill="%23ffffff" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" stroke="%23ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M8.489 31.975c-0.271 0-0.549-0.107-0.757-0.316-0.417-0.417-0.417-1.098 0-1.515l14.258-14.264-14.050-14.050c-0.417-0.417-0.417-1.098 0-1.515s1.098-0.417 1.515 0l14.807 14.807c0.417 0.417 0.417 1.098 0 1.515l-15.015 15.022c-0.208 0.208-0.486 0.316-0.757 0.316z"></path></g></svg>');
+                            background-repeat: no-repeat;
+                            background-size: 8px;
+                        }
+
+                        > a {
+                            color: #ffffff;
+                            font-family: Mulish;
+                        }
+                    }
+                }
+            }
+        }
+
+        .topBanner__heading {
+            margin-top: 40px;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 26px;
+            margin-bottom: 20px;
+            font-family: Mulish;
+        }
+
+        .topBanner__text {
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 140%;
+            margin-bottom: 45px;
+            font-family: Mulish;
+        }
+    }
+}
+
+.contact-us-navigation {
+    background-color: #fafafa;
+    padding: 12px 0;
+
+    @media (max-width: 767px) {
+        padding-right: 15px;
+    }
+
+    .navigation__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style-type: none;
+        margin-bottom: 0;
+        column-gap: 47px;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        scroll-snap-stop: always;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+         display: none;
+        }
+
+        .navigation__item {
+            scroll-snap-align: center;
+            > a {
+                white-space: nowrap;
+                font-size: 15px;
+                font-family: Mulish;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 140%;
+                margin-bottom: 45px;
+            }
+        }
+    }
+}
+
+.custom-contact-us-content {
+    .page-content {
+        width: 100%;
+    }
+    .contact-form-title {
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 26px;
+        font-family: Mulish;
+        text-transform: capitalize;
+    }
+
+    .contact-form-text {
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 140%;
+        font-family: Mulish;
+    }
+
+    .contact-us-title {
+        margin-top: 57px;
+        margin-bottom: 58px;
+    }
+
+    .contact-form__row {
+        display: flex;
+
+        @media (max-width: 767px) {
+            flex-direction: column;
+        }
+
+        .contact-form__col {
+            &.contact-form--left {
+                width: 50%;
+
+                @media (min-width: 1350px) {
+                    width: calc(100% - 550px);
+                }
+
+                @media (max-width: 767px) {
+                    width: 100%;
+                }
+
+                .form-field {
+                    width: 100%;
+                    margin-bottom: 17px;
+
+                    .form-label {
+                        font-weight: 700;
+                        font-family: Mulish;
+                        margin-bottom: 8px;
+                        float: left;
+
+                        small {
+                            font-size: 0;
+                            margin-left: 4px;
+                            margin-top: 0;
+
+                            &::after {
+                                content: "*";
+                                color: red;
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+
+                > .contact-form-text {
+                    margin-bottom: 30px;
+                }
+
+                .form-actions {
+                    .button {
+                        float: left;
+                        width: 100%;
+                        max-width: 227px;
+                        font-weight: 700;
+                    }
+                }
+            }
+
+            &.contact-form--right {
+                margin-left: 62px;
+                padding: 55px;
+                background-color: #fafafa;
+                width: 50%;
+
+                @media (max-width: 1024px) {
+                    margin-left: 30px;
+                    padding: 24px;
+                }
+
+                @media (max-width: 767px) {
+                    margin-left: 0;
+                }
+
+                @media (min-width: 1350px) {
+                    width: 470px;
+                }
+
+                @media (max-width: 767px) {
+                    width: 100%;
+                }
+
+                .contact-form-title {
+                    margin-top: 0;
+                    margin-bottom: 0;
+                    padding-bottom: 10px;
+                }
+
+                > .contact-form-text {
+                    margin-bottom: 33px;
+                }
+
+                .contact-form__button {
+                    background-color: transparent;
+                    border: 1px solid #000000;
+                    font-weight: 700;
+                    width: 100%;
+                    max-width: 205px;
+                    margin-bottom: 32px;
+
+                    &:hover {
+                        background-color: #000000;
+                        color: #ffffff;
+                    }
+                }
+
+                .contact-form__info {
+                    .contact-form-text-icon {
+                        display: flex;
+                        align-items: center;
+                        .banner__icon {
+                            margin-right: 8px;
+                        }
+
+                        .banner__link {
+                            transform: translateY(-3px);
                         }
                     }
                 }
