--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -1,29 +1,123 @@
 {{#partial "page"}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<main class="page">
-	<div class="container">
-    <h1 class="page-heading">{{page.title}}</h1>
-    {{#if page.sub_pages}}
-        <nav class="navBar navBar--sub">
-            <ul class="navBar-section account-navigation">
-                {{#each page.sub_pages}}
-                    <li class="navBar-item"><a class="navBar-action" href="{{url}}">{{title}}</a></li>
-                {{/each}}
-            </ul>
-        </nav>
-    {{/if}}
-
-    <div class="page-content page-content--centered">
-        {{#if forms.contact.success}}
-            {{{lang 'forms.contact_us.successful' shopPath=urls.home}}}
-        {{else}}
-            <p>{{{page.content}}}</p>
-            {{> components/page/contact-us-form}}
-        {{/if}}
+<section class="contact-us-top-banner">
+    <div class="topBanner__image">
+        <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/contact-us-top-banner.png" class="topBanner-image-pc" alt="Conact Us Top Banner">
+        <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/contact-us-top-banner-mb.png" class="topBanner-image-mb" alt="Conact Us Top Banner">
     </div>
-	</div>
+
+    <div class="topBanner__content">
+        <div class="topBanner__breadcrumb">
+            {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+        </div>
+        
+        <h1 class="topBanner__heading uppercase text-center text-white">{{page.title}}</h1>
+        <p class="topBanner__text text-center text-white">
+            We love to hear from you on our customer service, merchandise, website or any topics you want to share with us. Your comments and suggestions will be appreciated.
+        </p>
+    </div>
+</section>
+
+<section class="contact-us-navigation">
+    <ul class="navigation__list">
+        <li class="navigation__item">
+            <a href="/our-company/" class="navigation__link">Our Company</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/rewards-program/" class="navigation__link">Rewards Program</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/shipping-returns/" class="navigation__link">Shipping & Returns</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/private-label/" class="navigation__link">Private label</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/bulk-wholesale/" class="navigation__link">Bulk & Wholesale</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/privacy-policy/" class="navigation__link">Private label</a>
+        </li>
+        <li class="navigation__item">
+            <a href="/trademarks/" class="navigation__link">Trademarks</a>
+        </li>
+    </ul>
+</section>
+
+<main class="page custom-contact-us-content">
+    <div class="container-1200">
+        <h2 class="contact-us-title mulish uppercase fw-900 text-center custom-heading">GET IN TOUCH</h2>
+
+        {{#if page.sub_pages}}
+            <nav class="navBar navBar--sub">
+                <ul class="navBar-section account-navigation">
+                    {{#each page.sub_pages}}
+                        <li class="navBar-item"><a class="navBar-action" href="{{url}}">{{title}}</a></li>
+                    {{/each}}
+                </ul>
+            </nav>
+        {{/if}}
+        
+        <div class="page-content page-content--centered">
+            {{#if forms.contact.success}}
+                {{{lang 'forms.contact_us.successful' shopPath=urls.home}}}
+            {{else}}
+
+                <div class="contact-form__row">
+                    <div class="contact-form__col contact-form--left">
+                        <h4 class="contact-form-title">Send us an email</h4>
+                        <p class="contact-form-text">Ask us anything! We're here to help.</p>
+
+                        {{> components/page/contact-us-form}}
+                    </div>
+                    <div class="contact-form__col contact-form--right">
+                        <h3 class="contact-form-title">Live Help</h3>
+                        <p class="contact-form-text">
+                            If you have an issue or question that requires immediate assistance, you can click the button below to chat live with a Customer Service representative. If we aren’t available, drop us an email to the left and we will get back to you within 20-36 hours!
+                        </p>
+
+                        <a href="#" class="contact-form__button button uppercase">
+                            Message us
+                        </a>
+
+                        <div class="contact-form__info">
+                            <p class="contact-form-text contact-form-text-icon contact-form-text-icon-phone">
+                                <span class="banner__icon">
+                                    <svg style="position: relative; top: 0px; width: 20px;height: 20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment-alt-dots" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-comment-alt-dots fa-w-16 fa-7x"><path fill="currentColor" d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64zM128 240c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z" class=""></path></svg>
+                                </span>
+                                <a href="tel:1 513 770 9177" class="banner__link contact-form-text">TEXT: 1-513-770-9177</a>
+                            </p>
+    
+                            <p class="contact-form-text contact-form-text-icon contact-form-text-icon-email">
+                                <span class="banner__icon">
+                                    <svg style="width: 20px;height: 20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-envelope fa-w-16 fa-7x"><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z" class=""></path></svg>
+                                </span>
+                                <a href="mailto:contact@midwestseasaltcompany.com" class="banner__link contact-form-text">contact@midwestseasaltcompany.com</a>
+                            </p>
+    
+                            <p class="contact-form-text">
+                                685 Market Street
+                                <br>
+                                San Francisco, CA 94105,
+                                <br>
+                                United States
+                            </p>
+    
+                            <p class="contact-form-text">
+                                Opening Hours
+                                <br>
+                                MON to SAT: 9:00 AM - 10:00 PM
+                                <br>
+                                SUN: 10:00 AM - 6:00 PM
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            {{/if}}
+        </div>
+        
+    </div>
 </main>
 
 {{/partial}}
