--- a/templates/pages/custom/page/about-us-layout.html
+++ b/templates/pages/custom/page/about-us-layout.html
@@ -246,12 +246,16 @@
                         <h4 class="banner__title uppercase">Contact Us</h4>
                         
                         <p class="banner__text banner__text-icon banner__text-icon-phone">
-                            <span class="banner__icon"></span>
+                            <span class="banner__icon">
+                                <svg style="position: relative; top: 0px; width: 20px;height: 20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment-alt-dots" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-comment-alt-dots fa-w-16 fa-7x"><path fill="currentColor" d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64zM128 240c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z" class=""></path></svg>
+                            </span>
                             <a href="tel:1 513 770 9177" class="banner__link banner__text">TEXT: 1-513-770-9177</a>
                         </p>
 
                         <p class="banner__text banner__text-icon banner__text-icon-email">
-                            <span class="banner__icon"></span>
+                            <span class="banner__icon">
+                                <svg style="width: 20px;height: 20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-envelope fa-w-16 fa-7x"><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z" class=""></path></svg>
+                            </span>
                             <a href="mailto:contact@midwestseasaltcompany.com" class="banner__link banner__text">contact@midwestseasaltcompany.com</a>
                         </p>
 
